Enable USB Mass Storage support

--- a/arch/arm/configs/m2z_lima_defconfig
+++ b/arch/arm/configs/m2z_lima_defconfig
@@ -3229,7 +3229,7 @@ CONFIG_USB_OHCI_HCD_PLATFORM=y
 #
 # also be needed; see USB_STORAGE Help for more info
 #
-# CONFIG_USB_STORAGE is not set
+CONFIG_USB_STORAGE=y
 
 #
 # USB Imaging devices
